syntax = "proto3";

package api.account.v1;

option go_package = "blog/api/account/v1;v1";
option java_multiple_files = true;
option java_package = "api.account.v1";

service Account {
	rpc CreateAccount (CreateAccountRequest) returns (CreateAccountReply);
	rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordReply);
	rpc LoginByAccount (LoginByAccountRequest) returns (LoginByAccountReply);
}

message CreateAccountRequest {
	string Account = 1;
	string Password = 2;
	string Email = 3;
}
message CreateAccountReply {}

message ResetPasswordRequest {
	string Account = 1;
	string Password = 2;
}
message ResetPasswordReply {}

message LoginByAccountRequest {
	string Account = 1;
	string Password = 2;
}
message LoginByAccountReply {
	string Token = 1;
}
